--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the root controller here.
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.price-block div.price-gd-top{
+  width: 255px;
+  height: 255px;
+  position: relative;
+  padding: 0px;
+}
+.price-block div.price-gd-top img{
+  width: 100%;
+  height: 100%;
+}
