--- a/app/views/admin_panel/index.html.erb
+++ b/app/views/admin_panel/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'admin_panel' %>
 <div class="admin-page-content container">
   <div class="row">
     <div class="col s12 m12 l12">
@@ -74,6 +75,51 @@
                     </div>
                     <div class="table-data-button">
                       <a class="waves-effect waves-light btn red" confirm="Are you sure you want to delete this hotel?" rel="nofollow" data-method="delete" href="<%= room_path(room) %>"><i class="material-icons left">delete</i>Delete</a>
+                    </div>
+                  </td>
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+      <div class="admin-content-section row">
+        <div class="admin-content-section-header col s12 m12 l12">
+          <p>Room Categories</p>
+        </div>
+        <div class="admin-content-section-desc col s12 m12 l12">
+          <p>Here you can edit or delete room categories</p>
+        </div>
+        <div class="admin-content-section-content  col s12 m12 l12">
+          <table>
+            <thead>
+            <tr>
+              <th>Name #</th>
+              <th>Description</th>
+              <th>Price</th>
+              <th>
+                <div class="table-data-button">
+                  <a class="waves-effect waves-light btn" href="<%= new_room_category_path %>"><i class="material-icons left">add</i>Add</a>
+                </div>
+              </th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <% @categories.each do |cat| %>
+                <tr>
+                  <td><%= cat.name %></td>
+                  <td><%= cat.description %></td>
+                  <td><%= cat.rate %></td>
+                  <td>
+                    <div class="table-data-button">
+                      <a class="waves-effect waves-light btn green" href="<%= edit_room_category_path(cat) %>"><i class="material-icons left">edit</i>Edit</a>
+                    </div>
+                    <div class="table-data-button">
+                      <a class="waves-effect waves-light btn red" confirm="Are you sure you want to delete this hotel?" rel="nofollow" data-method="delete" href="<%= room_category_path(cat) %>"><i class="material-icons left">delete</i>Delete</a>
                     </div>
                   </td>
                 </tr>
