--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'rooms' %>
 <div class="form-page-content">
   <div class="row container">
     <div class="col s12 form-column">
