--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'users' %>
 <p>Welcome <%= @email %>!</p>
 
 <p>You can confirm your account email through the link below:</p>
