--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'users' %>
 <div class="form-page-content">
   <div class="row container">
     <div class="col s12 form-column">
